2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Helpers.csproj:
	  Upgrade .NET version to 4.0.

2015-10-18  Natalia Portillo  <claunia@claunia.com>

	* PrintHex.cs:
	* DateHandlers.cs:
	* DiscImageChef.Helpers.csproj:
	  Added specific console handling for standard, verbose, debug
	  and error outputs.

2015-10-05  Natalia Portillo  <claunia@claunia.com>

	* PrintHex.cs:
	* Swapping.cs:
	* ArrayFill.cs:
	* DateHandlers.cs:
	* StringHandlers.cs:
	* BigEndianBitConverter.cs:
	* EndianAwareBinaryReader.cs:
	* Properties/AssemblyInfo.cs:
	* DiscImageChef.Helpers.csproj:
	  Move helpers to a separate library.
