@@ -1,3 +1,8 @@
+2015-12-04  Natalia Portillo  <claunia@claunia.com>
+
+	* StringHandlers.cs:
+	  Finally CD-Text on lead-in is getting decoded correctly...
+
 2015-10-19  Natalia Portillo  <claunia@claunia.com>
 
 	* DiscImageChef.Helpers.csproj:
